bug fix github page z-index restaurant

--- a/css/main.css
+++ b/css/main.css
@@ -231,6 +231,7 @@ main {
 .img-restaurant {
     position: relative;
     flex: 1;
+    z-index: 10;
 }
 
 .img-restaurant-cropped {
